# Ruler-Divide-Visualization

./: .gitignore  CMakeLists.txt  README.md  index.html  index.js  package.json  sketch.js  styles.css
src/: dnc.cpp
